# LondonZero

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-3rd-party.txt  LICENSE.DATA  README.md  context.md  nim-compose.yml
agent/: .gitattributes  .pre-commit-config.yaml  AGENTS.md  LICENSE-3rd-party.txt  LICENSE.md  README.md  pyproject.toml
agent/app/video_search_frag/: Dockerfile  docker-compose.yml  pyproject.toml
agent/app/video_search_frag/configs/: config.yml
agent/app/video_search_frag/src/video_search_frag/: __init__.py  enterprise_rag.py  lvs_video_understanding_frag.py  register.py  video_report_gen_frag.py
agent/configs/: londonzero.yml
agent/data/rag/: city_of_london_junctions.md  lcds_cycle_infrastructure.md  tfl_vision_zero.md
agent/docker/: Dockerfile  cleanup_vulnerabilities.py  verify_ffmpeg_tarball.py
agent/src/: sitecustomize.py
agent/src/londonzero_agents/: __init__.py  pipeline.py  prompt.py
agent/src/londonzero_agents/agents/: __init__.py  data_retrieval_agent.py  feasibility_agent.py  orchestrator_agent.py  perception_agent.py  redesign_agent.py
agent/src/londonzero_agents/api/: server.py
agent/src/londonzero_agents/data_models/: __init__.py  collision_profile.py  feasibility_brief.py  hazard_assessment.py  location.py  redesign_output.py
agent/src/londonzero_agents/tools/: __init__.py  aggregate_context.py  flux_inpaint.py  guidance_rag.py  image_understanding.py  load_collision_data.py  mapillary_search.py
agent/src/vss_agents/: prompt.py
agent/src/vss_agents/agents/: critic_agent.py  data_models.py  multi_report_agent.py  register.py  report_agent.py  search_agent.py  top_agent.py
agent/src/vss_agents/agents/postprocessing/: __init__.py  data_models.py  postprocessing_node.py
agent/src/vss_agents/api/: custom_fastapi_worker.py  health_endpoint.py  register.py  rtsp_stream_api.py  video_delete.py  video_search_ingest.py  video_upload_url.py
agent/src/vss_agents/data_models/: __init__.py  vss.py
agent/src/vss_agents/embed/: __init__.py  cosmos_embed.py  embed.py  rtvi_cv_embed.py
agent/src/vss_agents/evaluators/: evaluate_patch.py  register.py  utils.py
agent/src/vss_agents/evaluators/customized_qa_evaluator/: __init__.py  evaluate.py  register.py
agent/src/vss_agents/tools/: attribute_search.py  chart_generator.py  embed_search.py  evaluation_compressor.py  fov_counts_with_chart.py  geolocation.py  incidents.py  lvs_video_understanding.py  multi_incident_formatter.py  prompt_gen.py  register.py  report_gen.py  rtvi_vlm_alert.py  s3_picture_url.py  search.py  template_report_gen.py  video_caption.py  video_detailed_caption.py  video_frame_timestamp.py  video_report_gen.py  video_skim_caption.py  video_understanding.py  vss_summarize.py  vst_download.py  vst_files.py
agent/src/vss_agents/utils/: asyncmixin.py  file_mapping.py  frame_select.py  markdown_parser.py  parser.py  reasoning_parsing.py  reasoning_utils.py  retry.py  time_convert.py  time_measure.py  url_translation.py  video_file.py
agent/src/vss_agents/video_analytics/: README.md  embeddings.py  es_client.py  interface.py  nvschema.py  query_builders.py  tools.py  utils.py
agent/stubs/nat/data_models/: __init__.pyi  common.pyi  evaluator.pyi  function.pyi
agent/tests/unit_test/: __init__.py  conftest.py  test_prompt.py  test_sitecustomize.py
agent/tests/unit_test/agents/: __init__.py  test_data_models.py  test_multi_report_agent.py  test_report_agent.py  test_search_agent.py  test_top_agent.py
agent/tests/unit_test/api/: conftest.py  test_health_endpoint_coverage.py  test_rtsp_stream_api.py  test_video_search_ingest.py  test_video_upload_url.py  test_video_upload_url_converters.py  test_video_upload_url_coverage.py  test_video_upload_url_inner.py
agent/tests/unit_test/data_models/: __init__.py  test_vss.py
agent/tests/unit_test/embed/: test_cosmos_embed.py
agent/tests/unit_test/evaluators/: __init__.py  test_custom_qa.py  test_custom_trajectory.py  test_data_models.py  test_eval_config_models.py  test_evaluate.py  test_evaluate_patch.py  test_field_evaluators.py  test_llm_judge.py  test_llm_judge_coverage.py  test_llm_judge_field_discovery.py  test_register_coverage.py  test_report_evaluator.py  test_utils.py
agent/tests/unit_test/tools/: __init__.py  test_build_vst_url.py  test_chart_generator.py  test_chart_generator_converters.py  test_chart_generator_coverage.py  test_chart_generator_inner.py  test_code_executor.py  test_embed_search.py  test_embed_search_coverage.py  test_embed_search_edge_cases.py  test_embed_search_inner.py  test_evaluation_compressor.py  test_fov_counts.py  test_geolocation.py  test_incidents.py  test_lvs_video_understanding.py  test_multi_incident_formatter.py  test_prompt_gen.py  test_prompt_gen_coverage.py  test_prompt_gen_inner.py  test_python_executor.py  test_python_executor_coverage.py  test_report_gen.py  test_rtvi_vlm_alert.py  test_rtvi_vlm_alert_inner.py  test_s3_picture_url.py  test_search.py  test_search_converters.py  test_search_coverage.py  test_search_inner.py  test_search_more_edge_cases.py  test_template_report_gen.py  test_video_caption.py  test_video_caption_coverage.py  test_video_caption_inner.py  test_video_caption_vss_inner.py  test_video_detailed_caption.py  test_video_detailed_caption_coverage.py  test_video_frame_timestamp.py  test_video_frame_timestamp_coverage.py  (+9 more)
agent/tests/unit_test/utils/: __init__.py  test_asyncmixin.py  test_file_mapping.py  test_frame_select.py  test_markdown_parser.py  test_parser.py  test_reasoning_parsing.py  test_reasoning_utils.py  test_retry.py  test_rewrite_url_host.py  test_screenshot.py  test_time_measure.py  test_url_translation.py  test_video_file.py
agent/tests/unit_test/video_analytics/: __init__.py  test_embeddings.py  test_es_client.py  test_interface.py  test_nvschema.py  test_query_builders.py  test_tools.py  test_tools_deep_coverage.py  test_tools_edge_cases.py  test_tools_functions.py  test_tools_inner.py  test_tools_inner_fns.py  test_tools_integration.py  test_utils.py
(+330 files in other folders)
