[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = ".."

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vss_agents"]


[tool.uv]
prerelease = "allow"
managed = true
index-strategy = "unsafe-best-match"
# Security: constrain transitive dependencies to patch HIGH/CRITICAL CVEs
constraint-dependencies = [
    "cryptography>=46.0.5",         # Fix CVE-2026-26007 (SECT curve subgroup attack)
    "langchain-community>=0.3.27",  # Fix CVE-2025-6984 (XXE in EverNoteLoader)
    "langchain-core>=1.2.11",       # Fix CVE-2025-68664, CVE-2025-65106, CVE-2026-26013 (SSRF in ChatOpenAI)
    "langgraph-checkpoint>=4.0.0",  # Fix CVE-2025-64439 (RCE in JsonPlusSerializer) & CVE-2026-27794 (BaseCache pickle)
    "pillow>=12.1.1",               # Fix CVE-2026-25990 (PSD out-of-bounds write)
    "pypdf>=6.7.3",                 # Fix CVE-2026-27888 (XFA decompression bomb) & CVE-2026-27628 (infinite loop)
]

# Override nvidia-nat-core's fastapi~=0.119.0 pin to allow starlette>=0.49.1
override-dependencies = [
    "fastapi>=0.121.0",
]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/nvidia-nat/"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true



[project]
name = "vss_agents"
dynamic = ["version"]
dependencies = [
  # Keep package version constraints as open as possible to avoid conflicts with other packages. Always define a minimum
  # version when adding a new package. If unsure, default to using `~=` instead of `==`. When using `~=`, use 2 digits
  # of precision in the version specifier. For example, use `~=1.2` instead of `~=1.2.3` and `~=0.1.3` instead of
  # `~=0.1.3.5`.
  # Keep sorted!!!
  # s3 for s3 object store
  "docker>=7.1.0",
  "duckdb>=1.5.0.dev44",
  "langchain-core >= 1.2.11",
  "langchain-nvidia-ai-endpoints>=1.0.4",
  "langgraph-checkpoint >= 4.0.0",
  "markdown>=3.4.0",
  "matplotlib>=3.8.0",
  "mcp >= 1.23.0",
  "nvidia-nat[async-endpoints,langchain,mcp,opentelemetry,phoenix,profiling,s3]==1.5.0a20260218",
  "opencv-python-headless>=4.13.0.92",
  "protobuf>=6.33.5",
  "pydantic >=2.11,<3",
  "python-multipart>=0.0.22",
  "sentence-transformers>=3.0.0",
  "starlette >= 0.49.1",
  "tiktoken>=0.9.0",
  "torch>=2.5.0",
  "urllib3>=2.6.3",
  "xhtml2pdf>=0.2.11",
  "elasticsearch~=8.17.0",
]
requires-python = ">=3.13,<3.15"
description = "Deep Search Agent"
license = "Apache-2.0"
keywords = ["ai", "rag", "agents"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
]
authors = [{ name = "NVIDIA Corporation" }]
maintainers = [{ name = "NVIDIA Corporation" }]



[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24",
    "ruff>=0.12.0",
    "nvidia-nat[test]==1.5.0a20260218",
    "pytest-cov>=6.1",
    "types-requests>=2.32.4.20260107",
    "types-markdown>=3.10.0.20251106",
    "types-pyyaml>=6.0.12.20250915",
    "types-python-dateutil>=2.9.0.20260124",
    "detect-secrets>=1.5.0",
]
eval = [
    "nvidia-nat[weave]==1.5.0a20260218",
    "spacy>=3.7,<4.0",
]

[project.entry-points.'nat.components']
vss_tools = "vss_agents.tools.register"
vss_agents = "vss_agents.agents.register"
vss_api = "vss_agents.api.register"
vss_va_mcp = "vss_agents.video_analytics.tools"
vss_evaluators = "vss_agents.evaluators.register"
vst_tools = "vss_agents.tools.vst.register"



[tool.uv.sources]
# nvidia index currently only has langchain-nvidia-ai-endpoints up to 1.0.3; source = pypi so uv gets versions >1.0.3 from PyPI
langchain-nvidia-ai-endpoints = { index = "pypi" }
torch = [
    { index = "pytorch-cpu", marker = "platform_machine == 'x86_64' or platform_machine == 'aarch64'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "platform_machine == 'x86_64' or platform_machine == 'aarch64'" },
]

[tool.ruff]
# Basic settings
line-length = 120  # Match your existing standards

# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "ARG", "SIM", "TCH", "Q", "RUF"]

# Never enforce `E501` (line length violations) in doctest code.
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG001", "ARG002", "SIM117", "B017"]  # Test files commonly have unused mock args and nested with

[tool.ruff.lint]
# ignore maximum length for docstring, comments, and string
ignore = ["E501", "W505", "SIM108", "B024"]  # B024: ABC without abstract methods (ParserMixin pattern)

# Configure string formatting
[tool.ruff.format]
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true

# Line length for code blocks in docstrings
docstring-code-line-length = 120



# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Configure string formatting
[tool.ruff.pycodestyle]
# Maximum line length for docstrings
max-doc-length = 120

[tool.ruff.isort]
# Force sort within sections.
force-sort-within-sections = true

# Known first-party modules.
known-first-party = ["deep_search"]

# Known third-party modules.
known-third-party = ["langchain", "llama_index", "crewai", "semantic_kernel", "mem0ai", "zep_cloud"]

# Force separate parenthesized imports into separate lines.
split-on-trailing-comma = false

# Combine imports from the same module into a single `from` statement.
combine-as-imports = true

# Force `from` imports to wrap rather than hoist.
force-wrap-aliases = true

# Generate a `pyproject.toml` section when using `--generate-pyproject`.
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# Sort imports by type, which is equivalent to `--type-group=stdlib, --type-group=thirdparty, --type-group=firstparty, --type-group=local`.
order-by-type = true

# Force all imports to be sorted as a single section.
force-single-line = true

# Default section for imports.
default-section = "third-party"

[tool.coverage.run]
source = ["src/vss_agents"]
omit = [
    # ============================================================
    # DEPRECATED FILES
    # ============================================================
    # Legacy report agent - superseded by new implementation
    "*/agents/report_agent_old.py",
    
    # ============================================================
    # ENTRY POINTS / SCRIPTS (not library code)
    # ============================================================
    # FastAPI worker entry point script
    "*/api/custom_fastapi_worker.py",
    # Environment setup script loaded at Python startup
    "*/sitecustomize.py",
    
    # ============================================================
    # TEST FILES
    # ============================================================
    "*/tests/*",
    "*/test_*.py",
    
    # ============================================================
    # COMPLEX ASYNC AGENT ORCHESTRATION
    # Requires extensive NAT builder mocking, LLM chain mocking,
    # and complex state management simulation
    # ============================================================
    # Main orchestration agent - complex LangGraph state machine with tool routing
    "*/agents/top_agent.py",
    # Report generation agent - complex multi-step LLM workflow
    "*/agents/report_agent.py",
    # Multi-report coordination - orchestrates multiple report agents
    "*/agents/multi_report_agent.py",
    
    # ============================================================
    # EXTERNAL SERVICE INTEGRATIONS
    # Requires mock servers or extensive HTTP/API mocking for
    # Elasticsearch, VST, VLM, and other external services
    # ============================================================
    # Elasticsearch client - requires ES mock server
    "*/video_analytics/es_client.py",
    # VST tools - require VST API mocking
    # VST files tool - requires VST storage API mocking
    "*/tools/vst_files.py",
    # VST download tool - requires VST storage + file download mocking
    "*/tools/vst_download.py",
    # Video understanding - requires VLM API + S3 mocking
    "*/tools/video_understanding.py",
    # LVS video understanding - requires LVS backend API mocking
    "*/tools/lvs_video_understanding.py",
    # Geolocation tool - requires OpenStreetMap API mocking
    "*/tools/geolocation.py",
    # S3 picture URL - requires S3/MinIO + OpenCV mocking
    "*/tools/s3_picture_url.py",
    # Incidents tool - requires DuckDB + S3 integration mocking
    "*/tools/incidents.py",
    
    # ============================================================
    # REPORT GENERATION
    # Requires PDF rendering, template engines, object store,
    # and complex file I/O mocking
    # ============================================================
    # Template-based PDF report generation - xhtml2pdf mocking
    "*/tools/template_report_gen.py",
    # Video(uploaded) report generation - complex template + PDF mocking
    "*/tools/video_report_gen.py",
    # Report gen tool - object store + file system mocking
    "*/tools/report_gen.py",
    # Multi-incident formatter - chart gen + multiple tool coordination
    "*/tools/multi_incident_formatter.py",
    # FOV counts with chart - requires chart tool + histogram tool mocking
    "*/tools/fov_counts_with_chart.py",
    
    # ============================================================
    # LLM-BASED EVALUATION
    # Requires LLM mocking for judge-based evaluation flows
    # ============================================================
    # Report evaluator - LLM judge for report quality
    "*/evaluators/report_evaluator/evaluate.py",
    # Trajectory evaluator - LLM judge for agent trajectories
    "*/evaluators/customized_trajectory_evaluator/evaluate.py",
    # Evaluation compressor - LLM-based text compression
    "*/tools/evaluation_compressor.py",
    
    # ============================================================
    # DOCKER/CONTAINER EXECUTION
    # Requires Docker daemon mocking and container lifecycle management
    # ============================================================
    # Docker executor - requires Docker API mocking
    "*/tools/code_executor/docker_backend/docker_executor.py",
    # Image builder - requires Docker build API mocking
    "*/tools/code_executor/docker_backend/image_builder.py",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests/unit_test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Mypy configuration for type checking
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
mypy_path = "src:stubs"

# docker SDK has no type stubs; skip analysis to avoid false attr-defined errors
[[tool.mypy.overrides]]
module = "docker.*"
follow_imports = "skip"
