[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/video_search_frag"]

[project]
name = "video_search_frag"
version = "0.0.1"
dependencies = [
  "vss_agents",
]
requires-python = ">=3.13,<3.15"
description = "Video Search FRAG (Enterprise RAG + HITL LVS) Agent"
keywords = ["ai", "rag", "agents", "video", "enterprise-rag"]
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
video_search_frag = "video_search_frag.register"
